# musicfs

./: .gitignore  Makefile  README  TODO  dbschema.sql  description  initialize.sh
include/: debug.h  fusever.h  mfs_cleanup.h  mfs_cleanup_db.h  mfs_notify.h  mnode.h  mp3fs.h  mp3node.h  musicfs.h
pnotify/: Makefile
pnotify/pnotify-0.2/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in  index.html  pnotify.3  pnotify.c  pnotify.h  queue.h  test.c
src/: Makefile  id3test.c  mfs_cleanup_db.c  mfs_notify.c  mfs_subr.c  mfs_vnops.c  mp3_opt_parse.c  mp3_subr.c  mp3_vnops.c  mp3fs.c  musicfs.c  readdir_test.c
